serde_with_macros/tests/compile-fail/skip-none-not-struct.stderr
error: The attribute can only be applied to struct or enum definitions.
 --> $DIR/skip-none-not-struct.rs:3:1
  |
3 | #[skip_serializing_none]
  | ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
